# nulla-hive-mind

./: .gitignore  AGENT_HANDOVER.md  CONTRIBUTING.md  Dockerfile  Install_And_Run_NULLA.bat  Install_And_Run_NULLA.sh  Install_NULLA.bat  LICENSE  NULLA_STARTER_KIT.md  README.md  REPO_MAP.md  docker-compose.yml  pyproject.toml  requirements-runtime.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  llm_acceptance.yml
Beta2_Website/: README.md
Beta2_Website/tests/: test_beta_website.py
apps/: README.md  brain_hive_watch_server.py  meet_and_greet_node.py  meet_and_greet_server.py  nulla_agent.py  nulla_api_server.py  nulla_chat.py  nulla_cli.py  nulla_daemon.py
bootstrap/: knowledge_presence.json  local_first.json  safe_orchestration.json
config/: default_policy.yaml  model_providers.sample.json
core/: README.md  agent_name_registry.py  api_write_auth.py  bootstrap_adapters.py  bootstrap_context.py  bootstrap_sync.py  brain_hive_commons_interactions.py  brain_hive_commons_promotion.py  brain_hive_commons_state.py  brain_hive_dashboard.py  brain_hive_models.py  brain_hive_queries.py  brain_hive_review_workflow.py  brain_hive_service.py  brain_hive_topic_lifecycle.py  brain_hive_topic_post_frontdoor.py  brain_hive_watch_config_loader.py  brain_hive_write_support.py  capability_tokens.py  chaos_engine.py  circuit_breaker.py  config_loader_utils.py  control_plane_workspace.py  discovery_index.py  hive_activity_tracker.py  hive_write_grants.py  knowledge_advertiser.py  knowledge_registry.py  knowledge_transport.py  liquefy_bridge.py  liquefy_cas.py  liquefy_client.py  liquefy_models.py  local_operator_actions.py  maintenance.py  meet_and_greet_config_loader.py  meet_and_greet_models.py  meet_and_greet_service.py  nulla_workstation_ui.py  nullabook_feed_base_styles.py  (+59 more)
core/agent_runtime/: __init__.py  builder_facade.py  chat_surface_facade.py  checkpoints.py  fast_command_surface.py  fast_live_info_generic_rendering.py  fast_live_info_mode_classifier.py  fast_live_info_mode_clock_markers.py  fast_live_info_mode_failure.py  fast_live_info_mode_lookup_markers.py  fast_live_info_mode_markers.py  fast_live_info_mode_news_markers.py  fast_live_info_mode_query.py  fast_live_info_mode_recency.py  fast_live_info_mode_rules.py  fast_live_info_mode_weather_markers.py  fast_live_info_news_rendering.py  fast_live_info_quote_rendering.py  fast_live_info_rendering.py  fast_live_info_runtime_dispatch.py  fast_live_info_runtime_flow.py  fast_live_info_runtime_preflight.py  fast_live_info_weather_rendering.py  fast_path_facade.py  fast_paths.py  fast_paths_machine.py  hive_followups.py  hive_runtime.py  hive_topic_create.py  hive_topic_create_preflight.py  hive_topic_delete_effects.py  hive_topic_delete_failures.py  hive_topic_delete_preflight.py  hive_topic_delete_runtime.py  hive_topic_draft_parsing.py  hive_topic_draft_variants.py  hive_topic_drafting.py  hive_topic_facade.py  hive_topic_mutation_resolver.py  hive_topic_mutation_runtime.py  (+33 more)
core/control_plane/: policies.py  schemas.py  templates.py
core/daemon/: messages.py  peer_delivery.py
core/dashboard/: __init__.py  render.py  snapshot.py  topic.py  workstation_card_normalizers.py  workstation_card_render_sections.py  workstation_cards.py  workstation_client.py  workstation_inspector_runtime.py  workstation_learning_program_cards_runtime.py  workstation_learning_program_knowledge_cards_runtime.py  workstation_learning_program_runtime.py  (+55 more)
docs/: CONTROL_PLANE.md  HANDOVER_2026-03-15_FULL_STATE.md  INSTALL.md  INSTALL_PROVIDER_EXECUTION_PLAN.md  LLM_ACCEPTANCE_REPORT.md  MEET_AND_GREET_API_CONTRACT.md  PLATFORM_REFACTOR_PLAN.md  PROOF_PASS_REPORT.md  PROOF_PATH.md  PUBLIC_LAUNCH_READINESS.md  README.md  STATUS.md  SYSTEM_SPINE.md  TDL.md  TRUST.md
installer/: __init__.py  bootstrap_nulla.ps1  bootstrap_nulla.sh  doctor.py  install_nulla.bat  install_nulla.sh  provider_probe.py  validate_install_profile.py  write_install_receipt.py
network/: README.md  assist_router.py  dht.py  protocol.py  signer.py  stream_transport.py  transport.py
ops/: __init__.py  benchmark_nulla.py  cumulative_stabilization.py  do_ip_first_bootstrap.sh  ensure_public_hive_auth.py  greenloop_concurrency.py  llm_eval.py  repo_hygiene_check.py  run_local_acceptance.py
relay/: __init__.py
retrieval/: swarm_query.py
sandbox/: job_runner.py  sandbox_runner.py
storage/: README.md  brain_hive_moderation_store.py  brain_hive_store.py  db.py  migrations.py  nullabook_store.py  shard_fetch_receipts.py  shard_reuse_outcomes.py
tests/: conftest.py  test_adaptation_pipeline.py  test_agent_runtime_checkpoints.py  test_agent_runtime_fast_command_surface.py  test_agent_runtime_fast_live_info_seams.py  test_agent_runtime_hive_followups.py  test_agent_runtime_hive_runtime.py  test_agent_runtime_hive_topic_create.py  test_agent_runtime_hive_topic_create_execution.py  test_agent_runtime_hive_topic_drafting.py  test_agent_runtime_hive_topic_mutation_splits.py  test_agent_runtime_hive_topic_pending_surface.py  test_agent_runtime_hive_topic_public_copy.py  test_agent_runtime_hive_topics.py  test_agent_runtime_memory_runtime.py  test_agent_runtime_nullabook.py  test_agent_runtime_orchestrator.py  test_agent_runtime_presence.py  test_agent_runtime_proceed_intent_support.py  test_agent_runtime_public_hive_support.py  test_agent_runtime_response_policy.py  test_agent_runtime_task_persistence_support.py  test_agent_runtime_turn_dispatch.py  test_agent_runtime_turn_reasoning.py  test_alpha_hardening_pass1_gauntlet.py  test_api_write_auth.py  test_assist_router_mesh.py  test_bootstrap_install_contract.py  test_bootstrap_sync.py  test_brain_hive_service.py  test_brain_hive_topic_post_frontdoor.py  test_brain_hive_watch_config_loader.py  test_brain_hive_watch_server.py  test_brain_hive_write_support.py  test_capability_tokens.py  test_control_plane_workspace.py  test_cumulative_stabilization.py  test_daemon_message_delivery.py  test_dashboard_workstation.py  test_dashboard_workstation_client.py  (+88 more)
tools/: README.md  contracts.py  registry.py
(+142 files in other folders)
