[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nulla-hive-mind"
version = "0.3.0"
description = "Nulla Hive Mind — local-first decentralized AI agent swarm with distributed reasoning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "sls_0x"},
]
keywords = ["ai", "agent", "swarm", "decentralized", "reasoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "cryptography>=41.0",
    "requests>=2.28",
    "pynacl>=1.5",
    "psutil>=5.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
models = [
    "sentence-transformers>=2.2",
    "openai>=1.0",
    "anthropic>=0.18",
    "torch>=2.5",
    "transformers>=4.48",
    "peft>=0.14",
    "accelerate>=1.2",
    "datasets>=3.2",
    "huggingface_hub>=0.28",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/Parad0x-Labs/nulla-hive-mind"
Repository = "https://github.com/Parad0x-Labs/nulla-hive-mind"
"Bug Tracker" = "https://github.com/Parad0x-Labs/nulla-hive-mind/issues"
"Brain Hive Watch" = "https://161.35.145.74.sslip.io/brain-hive"

[project.scripts]
nulla-agent = "apps.nulla_agent:main"
nulla-api = "apps.nulla_api_server:main"
nulla-daemon = "apps.nulla_daemon:main"
nulla-meet = "apps.meet_and_greet_server:main"
nulla-benchmark = "ops.benchmark_nulla:main"

[tool.setuptools.packages.find]
include = ["core*", "network*", "storage*", "sandbox*", "apps*", "ops*", "retrieval*", "channels*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",
    "E402",   # module-import-not-at-top (conditional/deferred imports)
    "E701",   # multiple-statements-on-one-line
    "E741",   # ambiguous-variable-name
    "N806",   # non-lowercase-variable-in-function
    "B904",   # raise-without-from-inside-except
    "SIM102", # collapsible-if
    "SIM108", # if-else-block-instead-of-if-exp
    "SIM112", # uncapitalized-environment-variables
    "SIM117", # multiple-with-statements
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
    "RUF012", # mutable-class-default
]

[tool.ruff.lint.isort]
known-first-party = ["core", "network", "storage", "sandbox", "apps", "ops", "retrieval", "channels"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
